--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,32 @@
 <header class="header">
-	<div class="header__container">
-	</div>
+		<div class="header__top top-header ">
+			<div class="header__container">
+				<div class="top-header__menu menu">
+					
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li class="menu__item"><a href="" class="menu__link">About us</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Payment and delivery</a></li>
+							<li class="menu__item"><a href="" class="menu__link">News</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Contacts</a></li>
+						</ul>
+					</nav>
+					
+				</div>
+				<div class="top-header__cabinet">
+					<div class="top-header__icon _icon-men"></div>
+					<a href="#" class="top-header__cabinet">My cabinet</a>
+					<button type="button" class="menu__icon icon-menu"><span></span></button>
+				</div>
+			</div>	
+		</div>
+		<div class="header__center center-header">
+			<div class="header__container">
+				<a href="#" class="logo">
+					<img src="@img/" alt="logo">
+				</a>
+			</div>
+		</div>
+		<div class="header__bottom"></div>
+	
 </header>
